src/test/compile-fail/if-no-else-is-nil.rs
fn main() {
    let x = if true { 3 };
    let y = x + 5;
}